# jetson-testing

./: mj_store_test.c  mj_store_test.h  use_a_prtcol_to_pack_store.c  use_a_prtcol_to_pack_store.h
jetson-utils-cuda/: cudaFont.cu  cudaFont.h
mj-codemyown/: CMakeCache.txt  Makefile  cmake_install.cmake  imagenet  imagenet.cpp
mj-cpp-test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mj-cpp  mj-cpp-test-cin-clear.cpp  mj-cpp-test-fileop.cpp  mj-cpp-test-getline.cpp  mj-cpp-test.cpp  mj-cpp-test.cpp.old
mj-cuda-test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mj-cuda  mj-cuda.cu  mj-cuda.cu.old
mj-drawcuda-test/: CMakeLists.txt  draw_ruler.cu  global_pos.h  imagenet.cpp  imagenet.cu.cansaveimg  imagenet.cu.working  imagenet_ros.cpp.simple_sub  mj-draw.cu  mj-draw.h  osd_ros_process.cpp  osd_ros_process.h  tele_cam_info.h  utc_time.h  video_cam.h
mj-drawcuda-test/ros_msg_include/: imu_att.h  osd_cmd.h  tele_cam_zoom.h
mj-opencv-test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imagenet  imagenet.cpp
mj-rosPubSub-test/: CMakeLists.txt  package.xml  pose_subscriber.cpp
mj-rosPubSub-test/learning_launch/: package.xml
mj-rosPubSub-test/learning_launch/launch/: simple.launch  turtlesim_parameter_config.launch  turtlesim_remap.launch
mj-rosPubSub-test/learning_parameter/: package.xml
mj-rosPubSub-test/learning_parameter/src/: parameter_config.cpp
mj-rosPubSub-test/learning_service/: CMakeLists.txt  package.xml
mj-rosPubSub-test/learning_service/src/: person_client.cpp  person_server.cpp  turtle_command_server.cpp  turtle_spawn.cpp
mj-rosPubSub-test/learning_topic/: CMakeLists.txt
mj-rosPubSub-test/learning_topic/msg/: global_pos.msg  imu_att.msg  tele_cam_info.msg  tele_cam_zoom.msg  utc_time.msg  video_cam.msg
mj-rosPubSub-test/learning_topic/src/: global_pos_publish.cpp  person_publisher.cpp  person_subscriber.cpp
mj-rosPubSub-test/src/: person_publisher.cpp  person_subscriber.cpp  velocity_publisher.cpp
